--- a/style.css
+++ b/style.css
@@ -8,13 +8,14 @@ h1 {
 .orange {
     color: red;
 }
-section{
+.flexible-container{
     display: flex;
     margin-bottom: 100px;
 }
 .half-width{
     width: 50%;
-    padding-left: 10%;
+    padding-left: 5%;
+    padding-right: 5%;
 }
 .half-width img{
     width: 50%;
@@ -31,16 +32,29 @@ section{
     background-image: url(images/top-banner1.jpg);
     background-repeat: no-repeat;
 }
-.part-two{
-    width: 50%;
-    padding: 10%;
-}
-.part-two img{
-    width: 100%;
-}
 .web-color{
     color: tomato;
 }
 .dream-big{
     background-image: url(images/section2.jpg);
+}
+.experience-area{
+    padding: 5%;
+}
+.experience-team{
+    margin-left: 5%;
+    margin-right: 5%;
+    width: 40%;
+    padding-left: 20px;
+    box-shadow: 10px 10px 50px black;
+    border-radius: 10px;
+}
+#full-stack-developer{
+    border-left: 7px solid blue;
+}
+#baby-web-developer{
+    border-left: 7px solid tomato;
+}
+footer p{
+    text-align: center;
 }
